Reduced memory usage by a ton. Searching File system still consumes a lot of memory